@@ -1,5 +1,6 @@
 <html><!-- webkit-test-runner [ CSSGradientPremultipliedAlphaInterpolationEnabled=false ] -->
 <head>
+<meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-7455" />
 <style>
     svg {
         width: 800px;
