@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-163" />
 <style>
     svg {
         width: 800px;
