@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta name="fuzzy" content="maxDifference=0-1;totalPixels=12300-12600" />
+    <meta name="fuzzy" content="maxDifference=0-1;totalPixels=12300-12700" />
     <style>
     	div {
             width: 200px;
