@@ -1,6 +1,7 @@
 <!DOCTYPE html><!-- webkit-test-runner [ AsyncOverflowScrollingEnabled=true ] -->
 <html lang="en">
 <head>
+  <meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-5" />
   <style>
     .content-wrapper {
       position: relative;
